# turbo-turtle

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml  ruff.toml
config/: urls.py
config/settings/: __init__.py  base.py  database.py  dev.py
